syntax = "proto3";
option go_package = "./client";
package client;

message CreateFileRequest {
    string name = 1;
    string dir = 2;
    bytes data = 3;
}

message CreateFileResponse {
    int64 bytesWritten = 1;
}

message GetFileRequest {
    string name = 1;
    string dir = 2;
}

message GetFileResponse {
    bytes data = 1;
}

message MkDirRequest {
    string dir = 1;
}

message MkDirResponse {
    int32 depth = 1;
}

message LSRequest {
    string dir = 1;
}

message LSResponse {
    repeated string files = 1;
    repeated string dirs = 2;
}

message GrepRequest {
    string pattern = 1;
    string dir = 2;
}

message GrepReponse {
    repeated string results = 1;
}

message TreeRequest {
    string dir = 1;
}

message TreeResponse {
    string tree = 1;
}

service ClientService {
    rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
    rpc GetFile(GetFileRequest) returns (GetFileResponse);
    rpc MkDir(MkDirRequest) returns (MkDirResponse);
    rpc LS(LSRequest) returns (LSResponse);
    rpc Grep(GrepRequest) returns (GrepReponse);
    rpc Tree(TreeRequest) returns (TreeResponse);
}