syntax = "proto3";
option go_package = "./metadata";
package metadata;

message RecRequest {
    int64 fileSize = 1;
}

message RecResponse {
    int32 port = 2;
}

message LocRequest {
    string filename =  1;
    string dir = 2;
}

message LocResponse {
    int32 port =  1; 
}

service MetadataService {
    rpc GetStorageLocationRecommendation(RecRequest) returns (RecResponse);
    rpc GetLocation(LocRequest) returns (LocResponse);
}